# libezV24

./: .cvsignore  .gitignore  AUTHORS  BUGS  CMakeLists.txt  COPYRIGHT  ChangeLog  HISTORY  Makefile  Makefile.cygwin  README  README.md  TODO  doxygen.conf  ezV24.c  ezV24.h  ezV24_config.h  libezV24.pc.in  libezV24.spec  manual.dxx  snprintf.c  test-v24.c
cmake/: ezV24-config.cmake.in  ezV24-version.cmake.in
debian/: .gitignore  README.Debian  changelog  control  copyright  docs  libezv24-1.docs  libezv24-1.postinst  libezv24-dev.dirs  libezv24-dev.doc-base  libezv24-dev.files  rules
doc/: doxygen.conf  manual.dxx
ezV24/: ezV24.h  ezV24_config.h
samples/: test-v24.c  v24dtr.c
src/: ezV24.c  snprintf.c
